--- a/IronmanSaveBackup/MainWindow.xaml
+++ b/IronmanSaveBackup/MainWindow.xaml
@@ -5,8 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IronmanSaveBackup"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Ironman Save Backup" Height="420" Width="620">
     <Grid>
+        <Label x:Name="saveLocationLabel" Content="Ironman Save Location" HorizontalAlignment="Left" Margin="30,14,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="backupLocationLabel" Content="Backup Location" HorizontalAlignment="Left" Margin="30,51,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="intervalLabel" Content="Backup Interval (seconds)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,87,0,0"/>
+        <Label x:Name="numToKeepLabel" Content="Backups to Keep" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,123,0,0"/>
+        <Label x:Name="restoreBackupLabel" Content="Restore Backup" HorizontalAlignment="Left" Margin="30,162,0,0" VerticalAlignment="Top" Width="100"/>
+
+        <Button x:Name="startButton" Content="Start Backup" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Margin="30,210,0,0"/>
+        <Button x:Name="stopButton" Content="Stop Backup" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Margin="135,210,0,0"/>
+        <Button x:Name="forceBackupButton" Content="Force Backup" HorizontalAlignment="Left" Margin="240,210,0,0" VerticalAlignment="Top" Width="100"/>
+        <Button x:Name="openSaveButton" Content="Open Save Directory" HorizontalAlignment="Left" VerticalAlignment="Top" Width="150" Margin="30,260,0,0"/>
+        <Button x:Name="openBackupButton" Content="Open Backup Directory" HorizontalAlignment="Left" VerticalAlignment="Top" Width="150" Margin="190,260,0,0"/>
+        <Button x:Name="deleteBackupButton" Content="Delete All Backups" HorizontalAlignment="Left" Background="PaleVioletRed" VerticalAlignment="Top" Width="180" Margin="30,310,0,0"/>
+        <Button x:Name="restoreBackupButton" Content="Restore Selected Backup" HorizontalAlignment="Left" Margin="345,210,0,0" VerticalAlignment="Top" Width="150"/>
+
+        <TextBox x:Name="saveTextbox" HorizontalAlignment="Left" PreviewMouseLeftButtonDown="SaveTextbox_Click" Height="25" Margin="246,14,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <TextBox x:Name="backupTextbox" HorizontalAlignment="Left" PreviewMouseLeftButtonUp="BackupTextbox_Click" Height="25" TextWrapping="Wrap"  Text="" VerticalAlignment="Top" Width="300" Margin="246,51,0,0"/>
+        <TextBox x:Name="intervalTextBox" HorizontalAlignment="Left" Height="25" TextWrapping="Wrap" Text="300" VerticalAlignment="Top" Width="300" Margin="246,87,0,0"/>
+        <TextBox x:Name="numToKeepTextbox" HorizontalAlignment="Left" ToolTip="The oldest backup will be deleted once the limit is reached. Enter 0 to keep all saves." Height="25" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Width="300" Margin="246,123,0,0"/>
         
+        
+        <ComboBox x:Name="restoreBackupCombo" HorizontalAlignment="Left" Margin="246,162,0,0" VerticalAlignment="Top" Width="300"/>
+
     </Grid>
 </Window>
